# llvm-clang-c-util-example

./: CMakeLists.txt  Makefile  README.md  clang-c-ast.cpp
clang-c-test/: cpptest.cpp  func.h  simple.c  test.sh
